--- a/Angular-app/src/app/setCamera/shop/shop.component.html
+++ b/Angular-app/src/app/setCamera/shop/shop.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class=".col-md-3 .col-md-offset-3">
       <form (submit)="createShow()" id="btnCreate">
-        <button type="submit" class="createBtn btn btn-secondary">Add/Edit Location</button>
+        <button type="submit" class="createBtn btn btn-secondary">Add Location</button>
       </form>
     </div>
   <div class="form-data" *ngIf="showCreateForm">
