--- a/Angular-app/src/app/home/home.component.html
+++ b/Angular-app/src/app/home/home.component.html
@@ -8,82 +8,103 @@
     </h4>
   </div> -->
   <div>
-    <h3>Visit Logs</h3>
+    <br>
     <div>
       <button *ngIf ="stopped ; else continue" type="button" class="btn btn-danger" (click)= "stop()">Stop Updates</button>
       <ng-template #continue>
         <button type="button" class="btn btn-success" (click)= "resume()">Continue Updates</button>
       </ng-template>
     </div>
-  
-    <div class="visitLogs" *ngFor= "let visit of visits">
-        <b class="text-success" *ngIf="visit._visitor.vip ; else blacklist"> 
-            *** VIP Visitor: ' 
-            <a [routerLink]="['user-detail', visit._visitor._id]"> 
-              <span *ngIf= "visit._visitor.first_name; else otherUser"> 
-                {{visit._visitor.first_name}} {{visit._visitor.last_name}} 
-              </span> 
-              <ng-template #otherUser> 
-                {{visit._visitor._id}}  
-              </ng-template> 
-            </a>' 
-            has entered camera location: 
-            <a [routerLink]= "['camera-detail', visit._camera._id]"> 
-                <span *ngIf= "visit._camera.location; else otherCam"> 
-                    {{visit._camera.location}}
-                </span> 
-                <ng-template #otherCam> 
-                  {{visit._camera.mac_addr}}
-                </ng-template> 
-            </a>  
-            on {{visit.visited | date:'y, MMM dd,  h:mm:ss a'}} ***
-      </b>
-      <ng-template #blacklist>
-          <b class="text-danger" *ngIf="visit._visitor.blacklist ; else normal"> 
-              ***** Blacklisted Visitor: ' 
-              <a [routerLink]="['user-detail', visit._visitor._id]"> 
-                <span *ngIf= "visit._visitor.first_name; else otherUser"> 
-                  {{visit._visitor.first_name}} {{visit._visitor.last_name}} 
-                </span> 
-                <ng-template #otherUser> 
-                  {{visit._visitor._id}}  
-                </ng-template> 
-              </a>' 
-              has entered camera location: 
-              <a [routerLink]="['camera-detail', visit._camera._id]"> 
-                  <span *ngIf= "visit._camera.location; else otherCam"> 
-                      {{visit._camera.location}}
-                  </span> 
-                  <ng-template #otherCam> 
-                    {{visit._camera.mac_addr}}
-                  </ng-template> 
-              </a>  
-              on {{visit.visited | date:'y, MMM dd,  h:mm:ss a'}} *****
-        </b>
-      </ng-template>
-      <ng-template #normal>
-        <b> 
-          Visitor: ' 
-          <a [routerLink]="['user-detail', visit._visitor._id]"> 
-            <span *ngIf= "visit._visitor.first_name; else otherUser"> 
-              {{visit._visitor.first_name}} {{visit._visitor.last_name}} 
-            </span> 
-            <ng-template #otherUser> 
-              {{visit._visitor._id}}  
-            </ng-template> 
-          </a>' 
-          has entered camera location: 
-          <a [routerLink]="['camera-detail', visit._camera._id]"> 
-              <span *ngIf= "visit._camera.location; else otherCam"> 
-                  {{visit._camera.location}}
-              </span> 
-              <ng-template #otherCam> 
-                {{visit._camera.mac_addr}}
-              </ng-template> 
-          </a>  
-          on {{visit.visited | date:'y, MMM dd,  h:mm:ss a'}} 
-        </b>
-      </ng-template>
+    <div class="row" >
+        <div class="column">
+          <p>Select Shops</p>
+        </div>
+    </div>
+
+    <div>
+      <table class="table table-hover">
+        <thead class="thead-dark">
+          <tr>
+            <th> <h3 style="color:whitesmoke">Visit Logs</h3> </th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor= "let visit of visits">
+            <td>
+                <b class="text-success" *ngIf="visit._visitor.vip ; else blacklist"> 
+                    *** VIP Visitor: ' 
+                  <a [routerLink]="['user-detail', visit._visitor._id]"> 
+                    <span *ngIf= "visit._visitor.first_name; else otherUser"> 
+                      {{visit._visitor.first_name}} {{visit._visitor.last_name}} 
+                    </span> 
+                    <ng-template #otherUser> 
+                      {{visit._visitor._id}}  
+                    </ng-template> 
+                  </a>' 
+                  has entered camera location: 
+                  <a [routerLink]= "['camera-detail', visit._camera._id]"> 
+                      <span *ngIf= "visit._camera.location; else otherCam"> 
+                          {{visit._camera.location}}
+                      </span> 
+                      <ng-template #otherCam> 
+                        {{visit._camera.mac_addr}}
+                      </ng-template> 
+                  </a>  
+                  on {{visit.visited | date:'y, MMM dd,  h:mm:ss a'}} ***
+              </b>
+        
+              <ng-template #blacklist>
+                  <b class="text-danger" *ngIf="visit._visitor.blacklist ; else normal"> 
+                      ***** Blacklisted Visitor: ' 
+                      <a [routerLink]="['user-detail', visit._visitor._id]"> 
+                        <span *ngIf= "visit._visitor.first_name; else otherUser"> 
+                          {{visit._visitor.first_name}} {{visit._visitor.last_name}} 
+                        </span> 
+                        <ng-template #otherUser> 
+                          {{visit._visitor._id}}  
+                        </ng-template> 
+                      </a>' 
+                      has entered camera location: 
+                      <a [routerLink]="['camera-detail', visit._camera._id]"> 
+                          <span *ngIf= "visit._camera.location; else otherCam"> 
+                              {{visit._camera.location}}
+                          </span> 
+                          <ng-template #otherCam> 
+                            {{visit._camera.mac_addr}}
+                          </ng-template> 
+                      </a>  
+                      on {{visit.visited | date:'y, MMM dd,  h:mm:ss a'}} *****
+                </b>
+              </ng-template>
+        
+              <ng-template #normal>
+                <b> 
+                  Visitor: ' 
+                  <a [routerLink]="['user-detail', visit._visitor._id]"> 
+                    <span *ngIf= "visit._visitor.first_name; else otherUser"> 
+                      {{visit._visitor.first_name}} {{visit._visitor.last_name}} 
+                    </span> 
+                    <ng-template #otherUser> 
+                      {{visit._visitor._id}}  
+                    </ng-template> 
+                  </a>' 
+                  has entered camera location: 
+                  <a [routerLink]="['camera-detail', visit._camera._id]"> 
+                      <span *ngIf= "visit._camera.location; else otherCam"> 
+                          {{visit._camera.location}}
+                      </span> 
+                      <ng-template #otherCam> 
+                        {{visit._camera.mac_addr}}
+                      </ng-template> 
+                  </a>  
+                  on {{visit.visited | date:'y, MMM dd,  h:mm:ss a'}} 
+                </b>
+              </ng-template>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+        
     </div>
   </div>
 </div>
