--- a/Angular-app/src/app/shop-detail/shop-detail.component.html
+++ b/Angular-app/src/app/shop-detail/shop-detail.component.html
@@ -54,10 +54,10 @@
           <input type="text" name="editShop.brand" [(ngModel)]="shop.brand">
         </label>
         <label> Branch:
-            <input type="text" name="editCamera.location" [(ngModel)]="shop.branch">
+            <input type="text" name="editShop.branch" [(ngModel)]="shop.branch">
           </label>
         <label> Address:
-            <input type="text" name="editCamera.location" [(ngModel)]="shop.address">
+            <input type="text" name="editShop.address" [(ngModel)]="shop.address">
         </label>
         <br>
     </form>
