add delete user

--- a/Angular-app/src/app/set/set.component.html
+++ b/Angular-app/src/app/set/set.component.html
@@ -38,7 +38,7 @@
           <td>
             <button  [routerLink]="['user-detail', user._id]" id="btnEdit" class="btn btn-primary btn-md center-block" >Edit</button>
             <form (submit)="delete(user._id)">
-              <button id="btnDelete" class="btn btn-danger btn-md center-block">Delete</button>
+              <button type="submit" id="btnDelete" class="btn btn-danger btn-md center-block">Delete</button>
             </form>
           </td>
         </tr>
