--- a/Angular-app/src/app/home/home.component.scss
+++ b/Angular-app/src/app/home/home.component.scss
@@ -2,4 +2,6 @@
     height: 100px;
     width: 100px;
     display: inline-block;
+    -webkit-perspective: 1000;
+    -webkit-backface-visibility: hidden;
 }
