--- a/Angular-app/src/app/home/home.component.html
+++ b/Angular-app/src/app/home/home.component.html
@@ -36,7 +36,7 @@
             <!-- Status -->
             <td>
                 <a [routerLink]="['user-detail', visit._visitor._id]"> 
-                    <img src="../../uploads/{{visit._visitor.faceImage[visit._visitor.faceImage.length -1]}}"  class="hover-shadow cursor" id="headshot" alt="cannot find img">
+                    <img src="../../uploads/{{visit.imagePath}}"  class="hover-shadow cursor" id="headshot" alt="cannot find img">
                 </a>
             </td>
             <td>
